# misc

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  clean.sh  install_local_ubuntu.sh  q1.c  q2.cpp
.github/workflows/: cmake-single-platform.yml
include/: InsertionSortStrategy.hpp  MergeSortStrategy.hpp  Person.hpp  SortStrategy.hpp
src/: CMakeLists.txt  InsertionSortStrategy.cpp  MergeSortStrategy.cpp  Person.cpp  Person.hpp  main.cpp
tests/: CMakeLists.txt  PersonTest.cpp
